<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="ExtraText"><![CDATA[
    tools:context=".LoginActivity" >
    ]]>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_background"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvEmployeeInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Input Employee Information"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:hint="First Name"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:hint="Last Name"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:hint="Email"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_phone_24"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:hint="Phone"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switchAMq"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="Opening Qualified"
                app:layout_constraintBottom_toTopOf="@+id/switchPMq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/switchPMq"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="Closing Qualified"
                app:layout_constraintBottom_toTopOf="@+id/btSubmitInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btSubmitInfo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Submit"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
