<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textEmployeeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: "
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- First Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter First Name" />
        </LinearLayout>

        <!-- Last Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:hint="Enter Last Name" />
        </LinearLayout>

        <!-- Phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Phone" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Email" />
        </LinearLayout>

        <!-- AM Qualification -->
        <Switch
            android:id="@+id/switchAMq"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="Opening Qualified"
            app:layout_constraintBottom_toTopOf="@+id/switchPMq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- PM Qualification -->
        <Switch
            android:id="@+id/switchPMq"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="Closing Qualified"
            app:layout_constraintBottom_toTopOf="@+id/switchPMq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <!-- Delete button -->

    <!-- Go Back button -->

    <!-- Save Button -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_save_24"
        app:backgroundTint="#336699"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Go back button
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:backgroundTint="#336699"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent" />
    -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_delete_24"
        app:backgroundTint="#336699"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
